[gd_scene load_steps=31 format=2]

[ext_resource path="res://scenes/Characters/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/Characters/Movement.tscn" type="PackedScene" id=2]
[ext_resource path="res://raw_assets/sounds/footsteps/mud.wav" type="AudioStream" id=3]
[ext_resource path="res://raw_assets/sounds/footsteps/stone.wav" type="AudioStream" id=4]
[ext_resource path="res://raw_assets/sounds/footsteps/broken_tile.wav" type="AudioStream" id=5]
[ext_resource path="res://raw_assets/textures/punch-sheet.png" type="Texture" id=6]
[ext_resource path="res://scenes/Characters/Player/player_weapon.gd" type="Script" id=7]
[ext_resource path="res://scenes/Characters/Player/player_weapon_manager.gd" type="Script" id=8]
[ext_resource path="res://raw_assets/fonts/scribbles.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://raw_assets/themes/player_hud_bars_theme.tres" type="Theme" id=10]
[ext_resource path="res://scenes/UI/ui_bar.gd" type="Script" id=11]
[ext_resource path="res://inventory/HotBarInventory.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/Characters/Health.tscn" type="PackedScene" id=13]
[ext_resource path="res://raw_assets/sounds/death/prole.wav" type="AudioStream" id=14]
[ext_resource path="res://raw_assets/sounds/spawn/role_prole.wav" type="AudioStream" id=15]
[ext_resource path="res://item/items/shotgun.tres" type="Resource" id=16]
[ext_resource path="res://raw_assets/textures/shotgun-sheet.png" type="Texture" id=17]
[ext_resource path="res://item/item_data_weapon.gd" type="Script" id=18]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="BoxShape" id=2]

[sub_resource type="Resource" id=16]
script = ExtResource( 18 )
name = "wep_fists"
description = "debug"
stackable = false
price = 0
damage = 5
max_ammo = 0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "attack"
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.2, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 0, 4, 0 ]
}

[sub_resource type="Animation" id=15]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.537255, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.376471 )

[sub_resource type="DynamicFont" id=8]
size = 35
font_data = ExtResource( 9 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Health" parent="." instance=ExtResource( 13 )]
max_health = 100
hurt_audio_stream = ExtResource( 15 )
death_audio_stream = ExtResource( 14 )

[node name="Movement" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Camera" type="Camera" parent="Head"]
cull_mask = 1048543

[node name="HintObjRayCast" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -999 )

[node name="InteractArea" type="Area" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="CollisionShape" type="CollisionShape" parent="Head/Camera/InteractArea"]
shape = SubResource( 2 )

[node name="WeaponManager" type="Spatial" parent="Head/Camera"]
script = ExtResource( 8 )

[node name="wep_fists" type="Spatial" parent="Head/Camera/WeaponManager"]
script = ExtResource( 7 )
is_melee = true
item_weapon_data = SubResource( 16 )

[node name="RangeRayCast" type="RayCast" parent="Head/Camera/WeaponManager/wep_fists"]
enabled = true
cast_to = Vector3( 0, 0, -3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head/Camera/WeaponManager/wep_fists"]
anims/RESET = SubResource( 3 )
anims/attack = SubResource( 4 )
anims/idle = SubResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="Head/Camera/WeaponManager/wep_fists"]

[node name="Control" type="Control" parent="Head/Camera/WeaponManager/wep_fists/CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0

[node name="Sprite" type="Sprite" parent="Head/Camera/WeaponManager/wep_fists/CanvasLayer/Control"]
position = Vector2( 150, -360 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
hframes = 4

[node name="wep_shotgun" type="Spatial" parent="Head/Camera/WeaponManager"]
script = ExtResource( 7 )
item_weapon_data = ExtResource( 16 )

[node name="RangeRayCast" type="RayCast" parent="Head/Camera/WeaponManager/wep_shotgun"]
enabled = true
cast_to = Vector3( 0, 0, -10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head/Camera/WeaponManager/wep_shotgun"]
anims/RESET = SubResource( 13 )
anims/attack = SubResource( 14 )
anims/idle = SubResource( 15 )

[node name="CanvasLayer" type="CanvasLayer" parent="Head/Camera/WeaponManager/wep_shotgun"]

[node name="Control" type="Control" parent="Head/Camera/WeaponManager/wep_shotgun/CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0

[node name="Sprite" type="Sprite" parent="Head/Camera/WeaponManager/wep_shotgun/CanvasLayer/Control"]
position = Vector2( 150, -360 )
scale = Vector2( 4, 4 )
texture = ExtResource( 17 )
hframes = 5

[node name="GroundRayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -999, 0 )

[node name="step_stone" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.992

[node name="step_transition" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -6.118

[node name="step_mud" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -11.361

[node name="UI" type="CanvasLayer" parent="."]

[node name="Bars" type="Control" parent="UI"]
anchor_left = 0.5
anchor_top = 0.025
anchor_right = 0.5
anchor_bottom = 0.025

[node name="health_bar" type="ProgressBar" parent="UI/Bars"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -17.5
margin_right = 500.0
margin_bottom = 17.5
theme = ExtResource( 10 )
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
value = 25.0
percent_visible = false
script = ExtResource( 11 )

[node name="Label" type="Label" parent="UI/Bars/health_bar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 8 )
text = "blood"
align = 1
valign = 1

[node name="HotBarInventory" parent="UI" instance=ExtResource( 12 )]
margin_left = 30.0
margin_top = 30.0
margin_right = 60.0
margin_bottom = 60.0
